# imu_node

./: CMakeLists.txt  README.md  package.xml
msg/: myserial.msg
src/: myserialpub.cpp  pub_imu.cpp  pub_imu_revised.cpp
srv/: myserialsrv.srv  myserialsrv.srv~
